package Software.Compresion;

public interface IMensaje {
    void escribir(String data);
    String leer();
}
