package Software.Contenido;

public interface ICompresionStrategy {
   String comprimir(String info);
   String descomprimir(String infoComprimida);
}
