package Software.Contenido;

public interface IEncriptarDecorator {
    String encriptar(String info);
    String decodificar(String info);
}
