@startuml

title __CONTENIDO's Class Diagram__\n

  namespace Software.Contenido {
    class Software.Contenido.CompresionDecorator {
        + CompresionDecorator()
        + comprimir()
        + descomprimir()
        + escribir()
        + leer()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.ContenidoTest {
        {static} + main()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.EncriptarDecorator {
        + EncriptarDecorator()
        + decodificar()
        + encriptar()
        + escribir()
        + leer()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.FirmaDigitalDecorator {
        - firma : byte[]
        - firmaDigital : Signature
        - llave : PublicKey
        + FirmaDigitalDecorator()
        + escribir()
        + firmar()
        + leer()
        + verificar()
        {static} - getKeyPair()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.HuffmanCompression {
        {static} ~ root : HuffmanNode
        {static} - charPrefixHashMap : Map<Character, String>
        + comprimir()
        + descomprimir()
        {static} - buildTree()
        {static} - setPrefixCodes()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.HuffmanCompression.HuffmanNode {
        ~ data : char
        ~ frequency : int
        + compareTo()
    }
  }
  

  namespace Software.Contenido {
    interface Software.Contenido.ICompresionStrategy {
        {abstract} + comprimir()
        {abstract} + descomprimir()
    }
  }
  

  namespace Software.Contenido {
    interface Software.Contenido.IEncriptarDecorator {
        {abstract} + decodificar()
        {abstract} + encriptar()
    }
  }
  

  namespace Software.Contenido {
    interface Software.Contenido.IFirmaDigitalDecorator {
        {abstract} + firmar()
        {abstract} + verificar()
    }
  }
  

  namespace Software.Contenido {
    interface Software.Contenido.IMensaje {
        {abstract} + escribir()
        {abstract} + leer()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.LempelZivCompression {
        - integers : List<Integer>
        + comprimir()
        + descomprimir()
        {static} - compress()
        {static} - decompress()
        - getIntegers()
        - setIntegers()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.Mensaje {
        - emisor : String
        - info : String
        - receptor : String
        + Mensaje()
        + escribir()
        + leer()
    }
  }
  

  namespace Software.Contenido {
    class Software.Contenido.MensajeDecorator {
        + MensajeDecorator()
        + escribir()
        + leer()
    }
  }
  

  Software.Contenido.CompresionDecorator .up.|> Software.Contenido.ICompresionStrategy
  Software.Contenido.CompresionDecorator -up-|> Software.Contenido.MensajeDecorator
  Software.Contenido.CompresionDecorator o-- Software.Contenido.ICompresionStrategy : compresionStrategy
  Software.Contenido.EncriptarDecorator .up.|> Software.Contenido.IEncriptarDecorator
  Software.Contenido.EncriptarDecorator -up-|> Software.Contenido.MensajeDecorator
  Software.Contenido.FirmaDigitalDecorator .up.|> Software.Contenido.IFirmaDigitalDecorator
  Software.Contenido.FirmaDigitalDecorator -up-|> Software.Contenido.MensajeDecorator
  Software.Contenido.HuffmanCompression .up.|> Software.Contenido.ICompresionStrategy
  Software.Contenido.HuffmanCompression +-down- Software.Contenido.HuffmanCompression.HuffmanNode
  Software.Contenido.HuffmanCompression.HuffmanNode .up.|> java.lang.Comparable
  Software.Contenido.HuffmanCompression.HuffmanNode o-- Software.Contenido.HuffmanCompression.HuffmanNode : left
  Software.Contenido.HuffmanCompression.HuffmanNode o-- Software.Contenido.HuffmanCompression.HuffmanNode : right
  Software.Contenido.LempelZivCompression .up.|> Software.Contenido.ICompresionStrategy
  Software.Contenido.Mensaje .up.|> Software.Contenido.IMensaje
  Software.Contenido.MensajeDecorator .up.|> Software.Contenido.IMensaje
  Software.Contenido.MensajeDecorator o-- Software.Contenido.IMensaje : paquete


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
